# ARC_26

./: README.md  wasd_drive.py
Arduino/: Drive_ARCv1.ino  Drive_ARCv2.ino  ESP32S3_Dabble_Drive.ino  MiniRover_BT.ino  pid_single_motor.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drive_controls/lib/drive_controls/: drive.py
install/drive_controls/share/drive_controls/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kratos_controllers/include/kratos_controllers/: double_ackermann_controller.hpp
install/kratos_controllers/share/kratos_controllers/: kratos_controllers.xml  local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rover_description/share/rover_description/: local_setup.sh  package.sh
install/rover_description/share/rover_description/rviz/: kratos_config.rviz
install/rover_description/share/rover_description/urdf/: kratos_rover.urdf.xacro
log/: latest_build
src/drive_controls/: CMakeLists.txt
src/drive_controls/scripts/: drive.py
src/kratos_controllers/: CMakeLists.txt  package.xml
src/kratos_controllers/include/: double_ackermann_controller.hpp
src/kratos_controllers/scripts/: double_ackermann_controller.cpp
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/config/: controllers.yaml
src/rover_description/urdf/: gazebo_plugins.xacro  inertial_macros.xacro  kratos_rover.urdf.xacro  ros2_control.xacro
(+3 files in other folders)
